--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@ async function loadShotFromCloud(shot) {
 }
 
 // ===== Cloud load for entire shot (initial fetch) =====
+// ===== Cloud load for entire shot (initial fetch) =====
 async function loadShotFromCloud(shot) {
   if (!firebaseReady || !currentVendor) return;
 
